<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FitBuddy</string>
    
    <!-- Signup -->
    <string name="signup_title">FitBuddy 회원가입</string>
    <string name="signup_subtitle">당신의 피트니스 여정을 시작하세요!</string>
    <string name="email">이메일</string>
    <string name="name">이름</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="signup_button">회원가입</string>
    <string name="already_have_account">이미 계정이 있으신가요?</string>
    <string name="login">로그인</string>
    
    <!-- Login -->
    <string name="login_title">FitBuddy 로그인</string>
    <string name="login_subtitle">다시 만나서 반가워요!</string>
    <string name="login_button">로그인</string>
    <string name="no_account">계정이 없으신가요?</string>
    
    <!-- User Info -->
    <string name="user_info_title">사용자 정보 입력</string>
    <string name="height">키 (cm)</string>
    <string name="weight">몸무게 (kg)</string>
    <string name="gender">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="other">기타</string>
    <string name="exercise_goal">운동 목적</string>
    <string name="weight_loss">체중 감량</string>
    <string name="muscle_gain">근력 증진</string>
    <string name="fitness">체력 향상</string>
    <string name="mass_gain">근육량 증가</string>
    <string name="balance">전신 밸런스 개선</string>
    <string name="next">다음</string>
    
    <!-- Weight Tracker -->
    <string name="current_weight">현재 체중</string>
    <string name="add_weight">오늘 체중 입력하기</string>
    <string name="weight_change">체중 변화</string>
    <string name="exercise">운동하기</string>
    <string name="exercise_desc">맞춤형 운동 프로그램을 시작하세요</string>
    <string name="chat">채팅하기</string>
    <string name="chat_desc">운동 관련 질문을 해보세요</string>
    
    <!-- Exercise Category -->
    <string name="exercise_category">운동 카테고리</string>
    <string name="select_body_part">원하는 부위를 선택해주세요</string>
    <string name="full_body">전신</string>
    <string name="upper_body">상체</string>
    <string name="lower_body">하체</string>
    <string name="core">복부</string>
    <string name="back_to_home">홈으로 돌아가기</string>
    
    <!-- Common -->
    <string name="back">뒤로가기</string>
    <string name="home">홈</string>
    <string name="send">전송</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
</resources>
